--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1> This is a website </h1>
         <p> This is soome text </p>
+        <h2> This is a photo from the interent</h2>
     
     
     </body>
