i added another line to make sure that it is working correctly still

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1> This is a website </h1>
         <p> This is soome text </p>
         <h2> This is a photo from the dan proudfoot </h2>
+        <h3> This is another test to check it's working</h3>
     
     
     </body>
