I have changed the size of the canvas from 500 x 500 to 800 x 800. Changed the player position from being on the bottom and shooting upwards to being on the left and shooting to the right. Also changed the direction the alien flock shoot.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
   <style>
       #gameboard { background-color:black; }
-      #game-wrapper { margin:0 auto; width: 500px; }
+      #game-wrapper { margin:0 height: 800px width: 800px; }
   </style>
 </head>
 <body>
   <div id='game-wrapper'>
-    <canvas id='gameboard' width='500' height='500'></canvas>
+    <canvas id='gameboard' width='800' height='800'></canvas> 
   </div>
 </body>
 </html>
