--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <script src='js/engine.js'></script>
   <script src='js/game.js'></script>
   <script src='js/level.js'></script>
+  <script src='js/resources.js'></script>
 
+    
   <style>
       #gameboard { background-color:black; }
-      #game-wrapper { margin:0 auto; width: 500px; }
+      #game-wrapper { margin:0 auto; height:500px; width: 500px; }
   </style>
 </head>
 <body>
