Moved the score and health into the correct places and changed the rate of alien fire

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
   <style>
       #gameboard { background-color:black; }
       #game-wrapper { margin:0 auto; height:500px; width: 500px; }
+      #lifes {
+			position:absolute;
+			top:20px;
+			left:700px;
+		}
+      #score {
+			position:absolute;
+			top:20px;
+			right:710px;
+			color:#CCC;
+			font-size:20px;
+		}
   </style>
 </head>
 <body>
